# fudura-assignment

./: .gitignore  ASSIGNMENT.md  README.md  config.py  database.py  docker-compose.yml  loader.py  main.py  models.py  pyproject.toml  setup_database.py  transformer.py
data/assets/: assets.json
data/telemetry/: 200e55ab-790b-4049-bf23-f84dc866dd32.json  499eba1c-bd0b-46db-a861-f8795fcbf02e.json  f31b650b-5f18-4a98-b01f-1170715a0796.json
