[project]
name = "fudura-assigment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
]
